create select terminal fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -308,4 +308,6 @@
     <string name="_7" translatable="false">7</string>
     <string name="_8" translatable="false">8</string>
     <string name="_9" translatable="false">9</string>
+
+    <string name="select_a_terminal">Select a terminal</string>
 </resources>
